# pydantic_argify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
docs/: mkdocs.yml
docs/docs/: basic_usage.md  index.md  introduction.md  library_reference.md
docs/site/: 404.html  index.html  objects.inv
docs/site/basic_usage/: index.html
docs/site/introduction/: index.html
docs/site/library_reference/: index.html
docs/site/search/: search_index.json
examples/: 00_getting_started.py  01_basic.py  02_sub_parser.py  04_cli_command.py  05_change_prefix_at_boolean.py  06_nested_field.py  sub_parser.py
pydantic_argify/: __init__.py  cli.py  config.py  parse.py
pydantic_argparse/: __init__.py  parse.py
pydantic_argparse_builder/: __init__.py  cli.py  config.py  parse.py
tests/: context.py  test_cli.py  test_parse.py  test_parse_nested_model.py
