[tool.poetry]
name = "pydantic-argparse-builder"
version = "0.3.0"
description = "Build ArgumentParser from pydantic model."
authors = ["elda27 <kaz.birdstick@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "pydantic_argparse_builder" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
