[tool.poetry]
name = "pydantic-argify"
version = "0.4.4"
description = "Build ArgumentParser from pydantic model."
authors = ["elda27 <kaz.birdstick@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "pydantic_argify" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poe.tasks]
test = "pytest --cov=pydantic_argify ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
